# roadtrid_planner

./: .gitignore  README.md  pages.toml  pyproject.toml
.github/workflows/: deploy-pages.yml
Japan/: japan.py  japan_map_items.json
scripts/: build_pages.py
src/: main.py
